fix: include outdoor T/RH in master csv even when we don't have indoor

--- a/code/notebooks/concatenate_meas.ipynb
+++ b/code/notebooks/concatenate_meas.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,8 @@
     "import pandas as pd\n",
     "from os.path import join\n",
     "\n",
-    "import pickle"
+    "import pickle\n",
+    "import pdb"
    ]
   },
   {
@@ -56,37 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Index' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-151-9d66d403d095>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtiming_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Index' object has no attribute 'split'"
-     ]
-    }
-   ],
-   "source": [
-    "timing_df.columns.split('a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pdb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,12 +142,17 @@
     "    \n",
     "    return loc_dfs\n",
     "\n",
-    "def add_outdoor_vals(output_df,dfs_outdoor):\n",
+    "def add_outdoor_vals(output_df, dfs_outdoor, timing_df):\n",
     "    res = output_df.copy()\n",
     "    for i in ['min','mean','max']:\n",
     "        to_join = dfs_outdoor[i].copy()\n",
+    "        to_join.index = pd.to_datetime(to_join.index)\n",
+    "        to_join = timing_df.join(to_join,on='Date',how='inner').drop_duplicates(\n",
+    "                ).set_index(\n",
+    "                ['Date', 'Session in day', 'Treatment group']).loc[:,['T','RH']]\n",
     "        to_join.columns = [r+'_out_daily'+i for r in to_join.columns]\n",
-    "        res = res.join(to_join,how='left')\n",
+    "        to_join.index.names = res.index.names\n",
+    "        res = res.join(to_join,how='outer')\n",
     "    return res"
    ]
   },
@@ -254,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -279,11 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_df_berk = add_outdoor_vals(out_df_berk,dfs_berk['outdoor'])"
+    "out_df_berk = add_outdoor_vals(out_df_berk, dfs_berk['outdoor'], timing_df_berk)"
    ]
   },
   {
@@ -295,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -361,11 +337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_df_bus = add_outdoor_vals(out_df_bus,dfs_bus['outdoor'])"
+    "out_df_bus = add_outdoor_vals(out_df_bus, dfs_bus['outdoor'], timing_df_bus)"
    ]
   },
   {
@@ -377,19 +353,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
     "out_df_bus.to_csv(save_fpath_bus,float_format='%.2f')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
