update: fix new bugs encountered in concatenate sess-lvl measurements

--- a/code/notebooks/concatenate_meas.ipynb
+++ b/code/notebooks/concatenate_meas.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,14 @@
     "from os.path import join\n",
     "\n",
     "import pickle\n",
-    "import pdb"
+    "import pdb\n",
+    "\n",
+    "idx = pd.IndexSlice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,30 +174,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading 2017-10-02 00:00:00...\n",
-      "Downloading 2017-10-11 00:00:00...\n",
-      "Downloading 2017-11-05 00:00:00...\n",
-      "Downloading 2017-11-16 00:00:00...\n",
-      "Downloading 2017-11-30 00:00:00...\n",
-      "Downloading 2017-12-03 00:00:00...\n",
-      "Downloading 2017-12-19 00:00:00...\n",
-      "Downloading 2018-01-26 00:00:00...\n",
-      "Downloading 2017-10-11 00:00:00...\n",
-      "Downloading 2017-11-05 00:00:00...\n",
-      "Downloading 2017-11-16 00:00:00...\n",
-      "Downloading 2017-11-30 00:00:00...\n",
-      "Downloading 2017-12-03 00:00:00...\n",
-      "Downloading 2017-12-19 00:00:00...\n",
-      "Downloading 2018-01-26 00:00:00...\n"
+      "/Users/ianbolliger/anaconda/envs/cooking_people/lib/python3.6/site-packages/pandas/core/indexing.py:357: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "/Users/ianbolliger/anaconda/envs/cooking_people/lib/python3.6/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "timing_df_berk = get_timing_df_berk(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -217,8 +226,7 @@
    ],
    "source": [
     "# load dataframes \n",
-    "dfs_berk = load_vals_berkeley(s)\n",
-    "timing_df_berk = get_timing_df_berk(s)"
+    "dfs_berk = load_vals_berkeley(s)"
    ]
   },
   {
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +251,7 @@
     }
    ],
    "source": [
+    "idx = pd.IndexSlice\n",
     "out_df_berk = calc_session_level_indoor_vals(dfs_berk['indoor'], timing_df_berk, s.berk)"
    ]
   },
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,9 +303,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading control room data...\n",
+      "Downloading 20171017...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171019...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171101...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171102...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171103...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171106...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171107...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171108...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171109...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171110...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171113...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171114...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171116...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171117...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171121...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171122...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171123...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171124...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171127...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171129...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171130...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171201...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171204...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171205...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171206...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171207...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171208...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171211...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171212...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171213...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171214...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180123...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180124...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180125...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180205...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180206...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180208...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading treatment room data...\n",
+      "Downloading 20171017...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171019...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171101...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171102...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171103...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171106...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171107...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171108...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171109...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171110...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171113...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171114...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171116...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171117...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171121...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171122...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171123...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171124...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171127...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171129...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171130...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171201...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171204...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171205...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171206...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171207...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171208...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171211...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171212...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171213...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20171214...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180123...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180124...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180125...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180205...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180206...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n",
+      "Downloading 20180208...\n",
+      "Downloading far sensor...\n",
+      "Downloading near sensor...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../scripts/utilities.py:152: UserWarning: Missing file: 20180208_Temp_WN.*csv\n",
+      "  warnings.warn('Missing file: {}'.format(fname))\n",
+      "/Users/ianbolliger/anaconda/envs/cooking_people/lib/python3.6/site-packages/pandas/core/indexing.py:357: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "/Users/ianbolliger/anaconda/envs/cooking_people/lib/python3.6/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
    "source": [
     "# load dataframes \n",
     "dfs_bus = load_vals_bus(s)\n",
@@ -312,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,19 +613,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "out_df_bus.to_csv(save_fpath_bus,float_format='%.2f')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cooking_people]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cooking_people-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
