--- a/code/concatenate_meas.ipynb
+++ b/code/concatenate_meas.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
     "out_df_berk = add_outdoor_vals(out_df_berk, dfs_berk[\"outdoor\"], timing_df_berk)\n",
     "\n",
     "# save aggregate data\n",
-    "out_df_berk.to_parquet(s.berk.env_out_path)"
+    "out_df_berk.to_csv(s.berk.env_out_path)"
    ]
   },
   {
@@ -358,7 +358,7 @@
     "out_df_bus = add_outdoor_vals(out_df_bus, dfs_bus[\"outdoor\"], timing_df_bus)\n",
     "\n",
     "# save aggregate data\n",
-    "out_df_bus.to_parquet(s.bus.env_out_path)"
+    "out_df_bus.to_csv(s.bus.env_out_path)"
    ]
   },
   {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
