--- a/code/publication_figures_and_tables.ipynb
+++ b/code/publication_figures_and_tables.ipynb
@@ -154,7 +154,7 @@
     "with (s.clean_data_dir / \"sensor_data_bus.pickle\").open(\"rb\") as f:\n",
     "    dfs_bus = pickle.load(f)\n",
     "\n",
-    "t_mod_df = pd.read_parquet(s.clean_data_dir / \"module_level_temps.parquet\")\n",
+    "t_mod_df = pd.read_parquet(s.module_temps_path)\n",
     "\n",
     "# outdoor t and rh per session\n",
     "daily_df = pd.read_stata(s.clean_data_dir / \"participants.dta\", preserve_dtypes=False)\n",
@@ -847,14 +847,18 @@
    "source": [
     "sess_dfs = {}\n",
     "for f in fpaths.keys():\n",
-    "    sess_dfs[f] = pd.read_parquet(\n",
+    "    sess_dfs[f] = pd.read_csv(\n",
     "        fpaths[f],\n",
-    "        columns=[\n",
+    "        usecols=[\n",
     "            \"RH_in_mean\",\n",
     "            \"Top_mean\",\n",
     "            \"co2_mean\",\n",
     "            \"T_in_mean\",\n",
+    "            \"date\",\n",
+    "            \"session\",\n",
+    "            \"treatment\",\n",
     "        ],\n",
+    "        index_col=[\"date\", \"session\", \"treatment\"],\n",
     "    )"
    ]
   },
@@ -1301,7 +1305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
