avoid hidden files in glob in concatenate_meas

--- a/code/concatenate_meas.ipynb
+++ b/code/concatenate_meas.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "parameters"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,9 +524,9 @@
     "\n",
     "\n",
     "for loc in s.sites:\n",
-    "    date_dirs = getattr(s, s.site_map[loc]).modules_dir.glob(\"*\")\n",
+    "    date_dirs = getattr(s, s.site_map[loc]).modules_dir.glob(\"[!.]*\")\n",
     "    for d in date_dirs:\n",
-    "        sessions = d.glob(\"*\")\n",
+    "        sessions = d.glob(\"[!.]*\")\n",
     "        for se in sessions:\n",
     "            sess = basename(se).split()\n",
     "            if sess[2] == \"C\":\n",
